Drivers: Made speed limiting optional in the LSL Driver
- By default the limit is now 'off'
- Also, changed the drift correction call to be after the stimulation push


Former-commit-id: 46a9a922f72cc55150c3092ef17867f3df1e0731 [formerly d47a15bdb24ea4be308b55905257c607acb4f648]
Former-commit-id: eade9d9baa736db993ca2254f9591a7e0549c1dc

--- a/applications/platform/acquisition-server/share/interface-LabStreamingLayer.ui
+++ b/applications/platform/acquisition-server/share/interface-LabStreamingLayer.ui
@@ -344,14 +344,40 @@ cf_int32 streams for markers</property>
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkLabel" id="label_limit_speed">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Limit speed :</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">5</property>
+                        <property name="bottom_attach">6</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="checkbutton_limit_speed">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">5</property>
+                        <property name="bottom_attach">6</property>
+                      </packing>
+                    </child>					
+                    <child>
                       <object class="GtkLabel" id="label_signal_stream">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Signal stream</property>
                       </object>
                       <packing>
-                        <property name="top_attach">5</property>
-                        <property name="bottom_attach">6</property>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
                       </packing>
                     </child>
                     <child>
@@ -369,8 +395,8 @@ cf_int32 streams for markers</property>
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="right_attach">2</property>
-                        <property name="top_attach">5</property>
-                        <property name="bottom_attach">6</property>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
                       </packing>
                     </child>
                     <child>
@@ -380,8 +406,8 @@ cf_int32 streams for markers</property>
                         <property name="label" translatable="yes">Marker stream</property>
                       </object>
                       <packing>
-                        <property name="top_attach">6</property>
-                        <property name="bottom_attach">7</property>
+                        <property name="top_attach">7</property>
+                        <property name="bottom_attach">8</property>
                       </packing>
                     </child>
                     <child>
@@ -399,8 +425,8 @@ cf_int32 streams for markers</property>
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="right_attach">2</property>
-                        <property name="top_attach">6</property>
-                        <property name="bottom_attach">7</property>
+                        <property name="top_attach">7</property>
+                        <property name="bottom_attach">8</property>
                       </packing>
                     </child>
                   </object>
